Fix few conflicts